syntax = "proto3";

package project_data;

// Image 消息
message Image {
  int32 width = 1;
  int32 height = 2;
  string format = 3;
  bytes data = 4;
}

// ForegroundMask 消息
message ForegroundMask {
  bytes mask_data = 1;
  int32 width = 2;
  int32 height = 3;
}

// Detection 消息
message Detection {
  float x1 = 1;
  float y1 = 2;
  float x2 = 3;
  float y2 = 4;
  float confidence = 5;
  string label = 6;
}

// DetectionResult 消息
message DetectionResult {
  repeated Detection detections = 1;
}

// State 消息
message State {
  float x = 1;
  float y = 2;
  float vx = 3;
  float vy = 4;
}

// StateUpdate 消息
message StateUpdate {
  State state = 1;
}

// FilteringRequest 消息
message FilteringRequest {
  DetectionResult detection_result = 1;
  ForegroundMask foreground_mask = 2;
}

// KalmanFilterRequest 消息
message KalmanFilterRequest {
  DetectionResult detection_result = 1;
  Image image = 2;
}

// BackgroundSubtractionService
service BackgroundSubtractionService {
  rpc ApplyBackgroundSubtraction(Image) returns (ForegroundMask);
}

// ObjectDetectionService
service ObjectDetectionService {
  rpc DetectObjects(Image) returns (DetectionResult);
}

// FilteringService
service FilteringService {
  rpc FilterDetectionsByMask(FilteringRequest) returns (DetectionResult);
}

// KalmanFilterService
service KalmanFilterService {
  rpc UpdateState(KalmanFilterRequest) returns (StateUpdate);
}