syntax = "proto3";

package background_subtraction;

// 前景掩码消息，包含序列化的掩码图像和原始图像尺寸
message ForegroundMask {
  bytes mask_data = 1;  // 前景掩码的字节数据
  int32 width = 2;      // 掩码图像的宽度
  int32 height = 3;     // 掩码图像的高度
}