syntax = "proto3";

package kalman_filter;

message State {
  float x = 1;
  float y = 2;
  float vx = 3;
  float vy = 4;
}

message StateUpdate {
  State state = 1;
}